Fixing resizing bug on mobile with hex background

--- a/src/App.css
+++ b/src/App.css
@@ -30,10 +30,10 @@ body {
 #canvas-wrapper {
 	position: absolute;
 	z-index: -1;
-	/*left: 50%;*/
 	overflow: hidden;
-	width: 100vw;
-	height: 100vh;
+	width: 100vh;
+	height: 100lvh;
+	position: fixed;
 }
 
 #background-canvas {
@@ -41,11 +41,7 @@ body {
 	image-rendering: -webkit-crisp-edges;
 	image-rendering: pixelated;
 	image-rendering: crisp-edges;
-	/*left: -50%;*/
 	position: fixed;
-  	height: calc(100% + 100px);
-	width: 100%;
-	height: 100%;
 }
 
 #root {
